# Guide_dog_Unitree_Go1

./: README.md  build.sh  guide_dog.repos  setup.sh  vnc_ctr.sh
.devcontainer/: Dockerfile  devcontainer.json
chatgpt_demos/: README.md  voice_controller.py
demos/: Makefile  README.md  build.sh  ros2_mini.Dockerfile
demos/ball_track/: README.md  package.xml  setup.cfg  setup.py
demos/ball_track/ball_track_ros2/: track_node.py
demos/ball_track/launch/: track.launch.py
demos/ball_track/script/: test.py
demos/go_republisher/: README.md  package.xml  setup.cfg  setup.py
demos/go_republisher/republisher_ros2/: mono_node.py
demos/go_republisher/script_package/: mono_node.py
deploy/: README.md  install_deployment_code.sh  start_controller.sh  transfer_image.sh
docker/: Makefile  README.md  entrypoint.sh  readme.txt  ros2_dev.Dockerfile  ros2_dev_1.Dockerfile  ros2_runtime.Dockerfile
guide_dog_unitree_go1/: package.xml
guide_dog_unitree_go1/src/: guide_dog.cpp  vision_obstacles.cpp  voice_control.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/republisher_ros2/lib/republisher_ros2/: mono_node
install/republisher_ros2/share/republisher_ros2/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
listen_talk_ros2/listen_talk_ros2/: package.xml
log/: latest_build
