<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>ball_track_ros2</name>
 <version>0.0.0</version>
 <description>TODO: Package description</description>
 <maintainer email="user@todo.todo">user</maintainer>
 <license>TODO: License declaration</license>

 <!-- <buildtool_depend>ament_python</buildtool_depend> -->

 <test_depend>ament_copyright</test_depend>
 <test_depend>ament_flake8</test_depend>
 <test_depend>ament_pep257</test_depend>
 <test_depend>python3-pytest</test_depend>

 <export>
   <build_type>ament_python</build_type>
 </export>

 <!-- <build_depend>tf</build_depend> -->
 <build_depend>rclpy</build_depend>
 <build_depend>sensor_msgs</build_depend>
 <build_depend>nav_msgs</build_depend>
 <!-- <build_depend>camera_info_manager_py</build_depend> -->

 <!-- <exec_depend>tf</exec_depend> -->
 <exec_depend>rclpy</exec_depend>
 <exec_depend>sensor_msgs</exec_depend>
 <exec_depend>nav_msgs</exec_depend>
 <!-- <exec_depend>message_runtime</exec_depend> -->
 <!-- <exec_depend>camera_info_manager_py</exec_depend> -->

</package>